--- a/azure-pipeline.yaml
+++ b/azure-pipeline.yaml
@@ -39,7 +39,7 @@ stages:
       - job: BuildImages
         displayName: "Build Application Images"
         pool:
-          name: "devopsjourney"
+          name: "devopsjourney1"
         steps:
           - task: AzureCLI@2
             displayName: "Build and Push Backend Image"
@@ -181,7 +181,7 @@ stages:
       - job: TriggerSync
         displayName: "Notify ArgoCD"
         pool:
-          name: "devopsjourney"
+          name: "devopsjourney1"
         steps:
           - task: AzureCLI@2
             displayName: "Notify ArgoCD and Wait for Sync"
